# zephyr-example

./: README.md
app/FIFO_example/: CMakeLists.txt  prj.conf
app/FIFO_example/src/: main.c
app/LIFO_example/: CMakeLists.txt  prj.conf
app/LIFO_example/src/: main.c
app/cmake_demo/: CMakeLists.txt
app/cmake_demo/src/: main.c  my_lib.c
app/condvar_example/: CMakeLists.txt
app/condvar_example/src/: main.c
app/intrrupt/: Interrupts_in_Zephyr_OS.docx
app/intrrupt/irq_disable/: CMakeLists.txt  prj.conf
app/intrrupt/irq_disable/src/: main.c
app/intrrupt/irq_lock/: CMakeLists.txt
app/intrrupt/irq_lock/src/: main.c
app/intrrupt/isr/: CMakeLists.txt
app/intrrupt/isr/src/: main.c
app/intrrupt/zero_latency_isr/: CMakeLists.txt  prj.conf
app/intrrupt/zero_latency_isr/src/: main.c
app/kconfig_demo/custom_kconfig/: CMakeLists.txt
app/kconfig_demo/custom_kconfig/boards/: nucleo_f746zg.conf
app/kconfig_demo/custom_kconfig/src/: main.c
app/kconfig_demo/kconfig_example/: CMakeLists.txt
app/kconfig_demo/kconfig_example/boards/: nucleo_f746zg.conf
app/my_hello/: CMakeLists.txt
app/my_hello/src/: main.c
app/polling_example/: CMakeLists.txt  prj.conf
app/polling_example/src/: main.c
app/scheduling_and_CPU_idling/: zepyr_Scheduling_and_CPU_Idling.docx
app/workqueue_thread_example/: prj.conf
cmake_demo/src/include/: my_lib.h
module/say_hello/: Kconfig
say_hello/: CMakeLists.txt  say_hello.c
say_hello/zephyr/: module.yaml
workqueue_thread_example/: CMakeLists.txt  nucleo_f746zg.overlay
workqueue_thread_example/src/: main.c
(+1 files in other folders)
